// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders DialogGenerator without buttons 1`] = `
<div
  aria-describedby="eds-dialog-customcontent"
  aria-labelledby="eds-dialog-title"
  aria-modal={true}
  className="sc-iUuytg jsxczE sc-iBaPrD iNLDTv"
  elevation="0 11px 15px rgba(0, 0, 0, 0.2),0 9px 46px rgba(0, 0, 0, 0.12),0 24px 38px rgba(0, 0, 0, 0.14)"
  role="dialog"
  tabIndex={0}
>
  <div
    className="sc-cTkwdZ cWkTID"
    id="eds-dialog-title"
  >
    This is the title
  </div>
  <hr
    className="sc-iqHYGH ccXakJ sc-jNMdTA dwWGAg"
  />
  <div
    className="sc-dOSReg iKqDIY"
    id="eds-dialog-customcontent"
  >
    <p>
      Hello from the inside
    </p>
  </div>
</div>
`;

exports[`renders full DialogGenerator 1`] = `
<div
  aria-describedby="eds-dialog-customcontent"
  aria-labelledby="eds-dialog-title"
  aria-modal={true}
  className="sc-iUuytg jsxczE sc-iBaPrD iNLDTv"
  elevation="0 11px 15px rgba(0, 0, 0, 0.2),0 9px 46px rgba(0, 0, 0, 0.12),0 24px 38px rgba(0, 0, 0, 0.14)"
  role="dialog"
  style={
    Object {
      "width": "300px",
    }
  }
  tabIndex={0}
>
  <div
    className="sc-cTkwdZ cWkTID"
    id="eds-dialog-title"
  >
    This is the title
  </div>
  <hr
    className="sc-iqHYGH ccXakJ sc-jNMdTA dwWGAg"
  />
  <div
    className="sc-dOSReg iKqDIY"
    id="eds-dialog-customcontent"
  >
    <p>
      Hello from the inside
    </p>
  </div>
  <div
    className="sc-eggNIi gJwBea footer"
  >
    <button
      className="sc-dlfnbm iLZdyH"
      disabled={false}
      onClick={[MockFunction]}
      tabIndex={0}
      type="button"
    >
      <span
        className="sc-gsTCUz dRDfTG"
      >
        <span
          className="sc-bdfBwQ bdhdma"
        >
          I changed my mind
        </span>
      </span>
    </button>
    <button
      className="sc-dlfnbm iMaTbo"
      disabled={false}
      onClick={[MockFunction]}
      tabIndex={0}
      type="button"
    >
      <span
        className="sc-gsTCUz dRDfTG"
      >
        <span
          className="sc-bdfBwQ bdhdma"
        >
          I agree
        </span>
      </span>
    </button>
  </div>
</div>
`;
